--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -4,7 +4,7 @@ h1 {
 
 .nav-background {
   margin: auto;
-  background-color: rgb(0, 0, 0);
+  background-color: whitesmoke;
   position: sticky;
   font-size: large;
   top: 0;
