--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -16,7 +16,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100vh;
 }
 
 .portfolioImg {
