--- a/src/About.css
+++ b/src/About.css
@@ -1,62 +1,46 @@
 .background {
   height: 100%;
   background: black;
-  
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .about-heading {
-  font-size: 2em;
-  color: green;
+  font-size: 3em;
+  font-weight: 900;
+  color: rgb(25, 189, 52);
 }
+
 .about-text {
   font-size: 1.2em;
-  line-height: 1.2;
-  color: green;
+  padding: 0px 1em;
+  font-weight: 500;
+  color: whitesmoke;
 }
 
 .container {
-  max-width: 600px;
   text-align: center;
   padding: 2em;
-  margin-bottom: 2em;
-}
-
-.aboutbox {
-  margin-bottom: 2em;
 }
 
 #me {
-  max-width: 30vw;
-  margin-right: 1em;
+  width: 10em;
   border-radius: 100%;
-  border: 10px solid green;
-  
+  border: none;
 }
 
 .about-button {
-  padding: 0.5rem 1rem;
+  color: black;
+  font-size: 1.2em;
   font-weight: 600;
+  background-color: rgb(25, 189, 52);
+  border: none;
+  text-decoration: none;
   cursor: pointer;
-  font-size: 1em;
-  border-radius: 5px;
-  margin-top: 1em;
-  margin-bottom: 5em;
+  border-radius: 30px;
+  padding: 10px 40px;
   transition: background-color 0.3s ease-in-out;
+  margin: 20px 0 40px 0;
 }
 
 button:hover {
   background-color: #555;
-}
-
-.imgbox {
-  margin-bottom: 2em;
-  display: flex;
-  justify-content: space-between;
-}
-
-.background {
-  height: 100vh;
 }
