--- a/src/Skills.css
+++ b/src/Skills.css
@@ -1,9 +1,9 @@
 .skills-background {
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: green;
+  background-color: black;
 }
 
 ul {
@@ -25,19 +25,17 @@ h1 {
 }
 
 .skills-heading {
-  font-size: 2em;
-  color: black;
+  font-size: 3em;
+  font-weight: 900;
+  color: rgb(25, 189, 52);
 }
 
 ul li {
   margin: 0.3rem;
   padding: 0.5rem;
-  border: 2px solid black;
-  border-radius: 5px;
+  border-radius: 30px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
-  background-color: transparent;
-  background-color: rgba(255, 255, 255, 0.1);
   &:hover {
     background-color: rgba(255, 255, 255, 0.3);
   }
